Refactor: Code improved to verify that user ids aren't repeated when creating a company